native with virtual threads